# caligula

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  default.nix  flake.nix  shell.nix
.cargo/: config  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_nix.yml  ci-unix.yml  ci.yml  deb.yml  nix-github-actions.yml  publish.yml
benches/: writer_process.rs
checks/: README.md  blocksize.nix  common.py  default.nix
checks/autoescalate/: .gitignore  default.nix
checks/common/: machine.nix  test.nix
checks/headless/: default.nix
checks/smoke-test-simple/: default.nix
checks/ui/: create-test-files.sh  default.nix  hash.txt  run-test-in-vm.sh  test.iso  test_ui.py
lib/stdiomux/: .gitignore  Cargo.toml
lib/stdiomux/examples/: basic_mux.rs
lib/stdiomux/src/: lib.rs  util.rs  utils.rs
lib/stdiomux/src/codec/: mod.rs  postcard.rs  util.rs
lib/stdiomux/src/frame/: futures.rs  mod.rs  simple.rs  sync.rs  tokio.rs
lib/stdiomux/src/mux/: mod.rs  traits.rs  util.rs
lib/stdiomux/src/mux/basic/: client.rs  mod.rs  server.rs
lib/stdiomux/src/mux/tokio/: mod.rs  simple.rs
lib/stdiomux/src/test_util/: kill_pipe.rs  mod.rs  mux_harness.rs
lib/stdiomux/src/test_util/mux/: action.rs  harness.rs  mod.rs  strategy.rs
lib/stdiomux/tests/: frame.rs  mux.rs
native/: Makefile
native/darwin/: .gitattributes  Makefile  REDiskList.m  enumdisk.h  enumdisk.m  enumdisk.mm
nix/: aur.nix  cross-helpers.nix  default.nix  lib.nix
nix/aur/: caligula-bin-aur.nix  default.nix
nix/build-helpers/: cross-helpers.nix  default.nix
nix/devvm/: README.md  configuration.nix  default.nix  usbhotplug.sh
packaging/aur/: .gitignore  Makefile  README.md
packaging/aur/dockerenv/: Dockerfile  entrypoint.sh
packaging/aur/dockerenv/tools/: caligula-bin.PKGBUILD  entrypoint.py
packaging/aur/inputs/: caligula-bin-PKGBUILD
scripts/: bisect_cmd.sh  lint.sh  regenerate_readme.py  set-version.sh  update-deps.sh
src/: burn.rs  byteseries.rs  childproc_common.rs  children.rs  cli.rs  compression.rs  device.rs  hash.rs  hashfile.rs  herder.rs  herder_service.rs  ipc_common.rs  lib.rs  logging.rs  main.rs  native.rs  outfile.rs  procmgr.rs  run_mode.rs  tty.rs  util.rs  verification.rs
src/burn/: child.rs  handle.rs  ipc.rs  mod.rs  state_tracking.rs  xplat.rs
src/compression/: zstd_streaming_decoder.rs
src/escalated_daemon/: handle.rs  ipc.rs  main.rs  mod.rs
src/escalation/: darwin.rs  hidden_input.rs  mod.rs  unix.rs
src/gui/: app.rs  mod.rs  sections.rs
src/gui/panels/: mod.rs  top_menu.rs
src/herder/: handle.rs  herder.rs  mod.rs
src/herder_daemon/: ipc.rs  mod.rs
src/herder_daemon/writer_process/: ipc.rs  mod.rs  tests.rs
src/herder_facade/: client.rs  evdist.rs  facade.rs  herder.rs  mod.rs
src/herder_service/: mod.rs  write.rs
src/herding/: herder.rs  local_herder.rs  mod.rs  reporting.rs  worker_factory.rs
src/herding/writer/: factory.rs  mod.rs  pipeline.rs  xplat.rs
src/ui/: ask_hash.rs  ask_input.rs  ask_outfile.rs  burn.rs  cli.rs  fopen.rs  main.rs  mod.rs  start.rs  utils.rs  writer_tracking.rs
src/ui/burn/: byteseries.rs  display.rs  history.rs  mod.rs  simple.rs  start.rs  state.rs
src/ui/burn/fancy/: ask_outfile.rs  display.rs  history.rs  mod.rs  state.rs  widgets.rs
src/ui/fancy_ui/: display.rs  mod.rs  setup.rs  state.rs  widgets.rs
src/ui/herder/: handle.rs  herder.rs  mod.rs  socket.rs
src/ui/herder/writer/: handle.rs  mod.rs  state_tracking.rs
src/ui/simple_ui/: ask_hash.rs  ask_outfile.rs  mod.rs
src/util/: hyperpipe.rs
src/windows_media/: mod.rs
src/writer/: file_source_reader.rs  mod.rs  state.rs  util.rs
src/writer_process/: child.rs  handle.rs  ipc.rs  mod.rs  state_tracking.rs  tests.rs  utils.rs  xplat.rs
stdiomux/: Cargo.toml  README.md
stdiomux/benches/: frame.rs
stdiomux/src/: adm.rs  frame.rs  lib.rs  mux.rs  queue.rs  rpc.rs  test_util.rs  util.rs
stdiomux/src/channel/: state.rs
stdiomux/src/mux/: channel.rs  mod.rs  state.rs  tokio.rs
stdiomux/src/mux/channel/: handle.rs  mod.rs  shared.rs  state.rs
stdiomux/tests/: mux.rs
