[package]
name = "caligula"
description = "A lightweight, user-friendly disk imaging tool"
homepage = "https://github.com/ifd3f/caligula"
repository = "https://github.com/ifd3f/caligula.git"
authors = ["Astrid Yu <astrid@astrid.tech>"]
version = "0.4.8"
edition = "2021"
license = "GPL-3.0"

[dependencies]
aligned-vec = "0.5.0"
anyhow = "1.0.82"
base16 = "0.2.1"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
bytesize = "1.3.0"
bzip2 = { version = "0.4.4", features = ["static"] }
clap = { version = "4.5.4", features = ["derive", "cargo", "wrap_help"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive_more = "0.99.17"
digest = "0.10.6"
flate2 = "1.0.25"
format-bytes = "0.3.0"
futures = "0.3.30"
futures-io = "0.3.26"
indicatif = "0.17.8"
inquire = "0.7.5"
interprocess = { version = "2.0.0", features = ["tokio"] }
is-terminal = "0.4.12"
itertools = "0.12.1"
libc = "0.2.154"
lz4_flex = "0.11.3"
md-5 = "0.10.5"
process_path = "0.1.4"
ratatui = "0.26.0"
ruzstd = "0.6.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha1 = "0.10.5"
sha2 = "0.10.6"
shell-words = "1.1.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = [
    "async-await",
    "log",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
tracing-unwrap = "1.0.1"
tui-input = "0.11.1"
tui-menu = "0.3.0"
which = "6.0.1"
xz2 = { version = "0.1.7", features = ["static"] }

[dev-dependencies]
approx = "0.5.1"
assert_matches = "1.5.0"
pretty_assertions = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rstest = "0.19.0"
test-case = "3.0.0"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[target.aarch64-apple-darwin.dependencies]
libc = "0.2.139"

[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"
