[workspace]
resolver = "3"
members = ["./lib/stdiomux"]

[package]
name = "caligula"
description = "A lightweight, user-friendly disk imaging tool"
homepage = "https://github.com/ifd3f/caligula"
repository = "https://github.com/ifd3f/caligula.git"
authors = ["Astrid Yu <astrid@astrid.tech>"]
version = "0.4.11"
edition = "2024"
license = "GPL-3.0"

[dependencies]
aligned-vec = "0.5.0"
anyhow = "1.0.100"
base16 = "0.2.1"
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = { version = "1.11.1", features = ["serde"] }
bytesize = "1.3.3"
bzip2 = { version = "0.6.1", features = ["static"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.49", features = ["derive", "cargo", "wrap_help"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive_more = "0.99.20"
digest = "0.10.7"
flate2 = "1.1.4"
format-bytes = "0.3.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
futures-io = "0.3.31"
indicatif = { version = "0.17.11", default-features = false }
inquire = { version = "0.7.5", default-features = false, features = ["crossterm"] }
is-terminal = "0.4.16"
itertools = "0.12.1"
libc = "0.2.177"
lz4_flex = { version = "0.11.6", default-features = false, features = ["frame"] }
md-5 = { version = "0.10.6", default-features = false }
process_path = "0.1.4"
ratatui = { version = "0.26.3", default-features = false, features = ["crossterm"] }
ruzstd = { version = "0.6.0", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
shell-words = "1.1.0"
stdiomux = { path = "lib/stdiomux" }
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "process", "io-util", "io-std", "macros", "fs"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing-unwrap = "1.0.1"
which = "6.0.3"
xz2 = { version = "0.1.7", features = ["static"] }

[dev-dependencies]
approx = "0.5.1"
assert_matches = "1.5.0"
pretty_assertions = "1.4.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rstest = "0.19.0"
test-case = "3.3.1"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[target.aarch64-apple-darwin.dependencies]
libc = "0.2.177"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.41"

[package.metadata.deb]
maintainer = "Astrid Yu <astrid@astrid.tech>"
copyright = "2025, Astrid Yu <astrid@astrid.tech>"
license-file = ["LICENSE", "4"]
extended-description = """
A lightweight, user-friendly disk imaging tool.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/caligula", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/caligula/README", mode = "644" },
]
