[package]
name = "stdiomux"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-strings = "0.3.1"
bytes = "1.11.1"
derive_more = { version = "2.1.1", features = ["from", "into"] }
futures = "0.3.32"
libc = "0.2.186"
proptest = "1.11.0"
strum = { version = "0.28.0", features = ["derive"] }
test-strategy = "0.4.5"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["io-std", "io-util", "macros"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
bytesize = "2.3.1"
criterion = { version = "0.8.2", features = ["async", "async_tokio", "html_reports"] }
proptest = "1.11.0"
proptest-derive = "0.8.0"
rand = "0.10.1"
rstest = "0.26.1"
test-log = { version = "0.2.20", features = ["trace"] }
tokio = { version = "1.52.1", features = ["full", "rt-multi-thread", "test-util"] }
tokio-pipe = "0.2.12"
tokio-stream = "0.1.18"

[[bench]]
name = "frame"
harness = false
