[package]
name = "stdiomux"
version = "0.1.0"
edition = "2024"

[features]
io-futures = ["futures/std"]
io-std = []
io-tokio = ["dep:tokio", "tokio/io-std", "tokio/io-util"]
proptest = ["dep:proptest", "dep:proptest-derive"]

[dependencies]
bytes = "1.11.1"
futures = { version = "0.3.32", default-features = false }
proptest = { version = "1.11.0", optional = true, features = ["proptest-macro"] }
proptest-derive = { version = "0.8.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.1", optional = true }

[dev-dependencies]
stdiomux = { path = ".", features = ["io-std", "io-tokio", "io-futures", "proptest"] }
proptest = "1.11.0"
test-strategy = "0.4.5"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread"] }
