[package]
name = "stdiomux"
version = "0.1.0"
edition = "2024"

[features]
default = ["io-std", "io-tokio"]
io-std = []
io-tokio = [
    "dep:tokio",
    "dep:tokio-util",
    "tokio/io-std",
    "tokio/io-util",
    "tokio/macros",
]
test-util = [
    "dep:proptest",
    "dep:proptest-derive",
    "dep:tokio-stream",
    "dep:tower",
    "dep:tokio-pipe",
    "tower/util",
]

[dependencies]
byte-strings = "0.3.1"
bytes = "1.11.1"
dashmap = "6.1.0"
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }
pin-project = "1.1.11"
postcard = { version = "1.1.3" }
proptest = { version = "1.11.0", optional = true, features = [
    "proptest-macro",
] }
proptest-derive = { version = "0.8.0", optional = true }
serde = "1.0.228"
thiserror = "2.0.18"
tokio = { version = "1.52.1", optional = true }
tokio-pipe = { version = "0.2.12", optional = true }
tokio-stream = { version = "0.1.18", optional = true }
tokio-util = { version = "0.7.18", optional = true }
tower = { version = "0.5.3", optional = true }
tower-service = "0.3.3"
tracing = "0.1.44"

[dev-dependencies]
stdiomux = { path = ".", features = ["io-std", "io-tokio", "test-util"] }
proptest = "1.11.0"
test-strategy = "0.4.5"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "time"] }
tokio-pipe = "0.2.12"
tower = { version = "0.5.3", features = ["tokio"] }
test-log = { version = "0.2.20", features = ["trace"] }
tracing-subscriber = "0.3.23"
